manifest/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: hello-world
  labels:
    name: hello-world
