manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ridwan-siswanto.com
      http:
        paths:
          - path: /hello-world-yt
            pathType: Prefix
            backend:
              service:
                name: hello-world-svc
                port:
                  number: 80
